Added search box and more flexbox goodness

--- a/index.html
+++ b/index.html
@@ -25,9 +25,26 @@
                 </li>
             </ul>
         </nav>
-        <div id="logo">
-                <img src="https://www.google.com/images/branding/googlelogo/1x/googlelogo_color_272x92dp.png" 
-                alt="Google logo">
+        <div id="main-content">
+            <div id="logo">
+                    <img src="https://www.google.com/images/branding/googlelogo/2x/googlelogo_color_272x92dp.png" 
+                    alt="Google logo" style="object-fit: contain">
+            </div>
+            <div id="search-box">
+                <form action="" style="flex-grow: 1;">
+                    <input type="search" name="search" id="search-text"
+                    style="
+                        font-size: 16px;
+                        border: none;
+                        outline: none;
+                        width: 100%;">
+                </form>
+            </div>
+            <div id="search-buttons">
+                <form action="">
+                    
+                </form>
+            </div>
         </div>
     </div>
 </body>
