--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div class="page-flex">
-        <nav class="navbar">
+        <nav class="navbar upper">
             <ul class="left-navbar">
                 <li><a href="#" id="about">About</a></li>
                 <li><a href="#" id="store">Store</a></li>
@@ -31,21 +31,32 @@
                     alt="Google logo" style="object-fit: contain">
             </div>
             <div id="search-box">
-                <form action="" style="flex-grow: 1;">
-                    <input type="search" name="search" id="search-text"
-                    style="
-                        font-size: 16px;
-                        border: none;
-                        outline: none;
-                        width: 100%;">
+                <form action="" style="flex: 1; padding: .2em;">
+                    <input type="search" name="search" id="search-text">
                 </form>
             </div>
             <div id="search-buttons">
                 <form action="">
-                    
+                    <button type="submit">Google Search</button>
+                    <button type="submit">I'm Feeling Lucky</button>
                 </form>
             </div>
         </div>
+        <div id="below-search">
+        </div>
+        <nav class="navbar lower">
+            <ul class="left-navbar">
+                <li><a href="#">Advertising</a></li>
+                <li><a href="#">Business</a></li>
+                <li><a href="#">How Search works</a></li>
+            </ul>
+            <ul class="right-navbar">
+                <li><a href="#">Privacy</a></li>
+                <li><a href="#">Terms</a></li>
+                <li><a href="#">Settings</a></li>
+            </ul>
+        </nav>
+        
     </div>
 </body>
 </html>
